Added endpoint to get logged in user details and to refresh token
